# xPano

./: .gitignore  GUI_QUICKSTART.md  INSTALL_DEPS.bat  INSTALL_MASKS_CPU.bat  INSTALL_MASKS_CUDA.bat  LICENSE  README.md  README.zh-CN.md  RUN_GUI.bat  RUN_GUI_DEBUG.bat  app.py  mask_requirements.txt  metashape_requirements.txt  requirements.txt  xPano.vbs
docs/: DEPENDENCIES.md  MULTI_TRACK_BACKEND.md  VERIFIED_WORKFLOW.md
scripts/: _probe_calibration_api.py  _probe_calibration_type_values.py  _probe_chunk_api.py  _probe_manifest_import.py  _probe_mask_api.py  _probe_metashape_api.py  _probe_metashape_camera_settings.py  _probe_mixed_export.py  _probe_remove_sensor.py  _probe_sensor_assignment.py  _probe_sensor_types.py  align_ground_plane.py  colmap_backend.py  colmap_dense_merge.py  compare_backend_outputs.py  dependency_checks.py  diagnose_metashape_project.py  download_binaries.ps1  export_colmap.py  install_colmap.ps1  install_deps.ps1  install_lfs_densify.ps1  install_masks.ps1  lichtfeld_densify.py  lichtfield_cli.py  metashape_export_colmap.py  metashape_pipeline.py  pano_extractor.py  pipeline_backends.py  postprocess_colmap_axis.py  process_guard.py  reexport_colmap_from_project.py  run_alignment_variants.py  run_lfs_densify_viewer.py  run_lichtfeld_densify_standalone.py  run_xpano_job.py  run_xpano_tracks_job.py  (+6 more)
xpano-ui/src-tauri/: Cargo.toml  tauri.conf.json
xpano-ui/src-tauri/icons/: icon.icns
xpano-ui/src-tauri/src/: lib.rs  mask_process.rs  pipeline.rs  process_job.rs  thumbgen.rs  tool_resolver.rs
xpano-ui/src-tauri/windows/: nsis-hooks.nsh
(+38 files in other folders)
